          XDB extension. Contributed by Marcelo Ochoa.
        - Added a "form" extension mapping in MetadataService for the
          media type "application/www-form-urlencoded". 
          Suggested by Tal Liron.
        - The class EmptyRepresentation is now public and the static 
          method Representation#createEmpty() has been deprecated.
    - Miscellaneous
        - Component XML configuration has been moved into an Engine 
          ComponentXmlParser class.

- 1.2 Milestone 2 (2009-04-01)
    - Breaking changes
        - Finder#createTarget() methods are now all protected. The 
          findTarget() method is now public. Suggested by Leigh Klotz.
        - All core representation classes have been moved from the
          "org.restlet.resource" package into a new 
          "org.restlet.representation" package. Make sure to adjust your
          import instructions.
        - The ConnectorService#afterSend() and beforeSend() are now
          always called, even if no entity is written. They are now 
          related to the sending of the message itself.
          Suggested by Paul Davis.
        - The Router.createFinder() method is now public.
        - The Callback abstract class in the GWT module is now an 
          interface. This should have no impact in most cases. Just
          remove any associated @Override annotations.
          Suggested by Scooter Willis.
    - Bugs fixed
        - Fixed typo in the declaration of the 
          o.r.e.Engine#DESCRIPTOR_AUTHENTICATOR. 
          Reported by Remi Dewitte.    
        - Removed all string instantiations of secrets. 
          Contributed by Remi Dewitte.
        - Fixed various OSGi issues. Reported by David Fogel.
        - Fixed missing entries in ChallengeScheme#valueOf.
          Reported by Sean Sullivan.
        - Fixed JAXB pom issue. Reported by Fabio Mancinelli.
        - Added workaround to make sure that the JAX-RS extension