@@ -12,7 +12,8 @@ Export-Package: org.restlet.ext.servlet;
    javax.servlet,
    org.restlet,
    org.restlet.util,
-   org.restlet.engine.application"
+   org.restlet.engine.application",
+ org.restlet.ext.servlet.internal
 Import-Package: javax.servlet,
  javax.servlet.http,
  org.restlet,
