@@ -28,48 +28,53 @@
  * Restlet is a registered trademark of Noelios Technologies.
  */
 
-package org.restlet.ext.servlet;
+package org.restlet.ext.servlet.internal;
 
-import javax.servlet.Servlet;
-import javax.servlet.ServletContext;
-
-import org.restlet.Context;
+import java.util.logging.LogRecord;
+import java.util.logging.Logger;
 
 /**
- * Exposes a Servlet context as a Restlet one. Context allowing access to the
- * component's connectors, reusing the Servlet's logging mechanism and adding
- * the Servlet's initialization parameters to the context's parameters.
+ * Logger that wraps the logging methods of javax.servlet.ServletContext.
  * 
  * @author Jerome Louvel
  */
-public class ServletContextAdapter extends Context {
-    /** The Servlet context. */
-    private volatile ServletContext servletContext;
+public class ServletLogger extends Logger {
+    /** The Servlet context to use for logging. */
+    private volatile javax.servlet.ServletContext context;
 
     /**
      * Constructor.
      * 
-     * @param servlet
-     *            The parent Servlet.
-     * @param parentContext
-     *            The parent context.
+     * @param context
+     *            The Servlet context to use.
      */
-    public ServletContextAdapter(Servlet servlet, Context parentContext) {
-        super(new ServletLogger(servlet.getServletConfig().getServletContext()));
-        this.servletContext = servlet.getServletConfig().getServletContext();
-        setClientDispatcher((parentContext != null) ? parentContext
-                .getClientDispatcher() : null);
-        setServerDispatcher((parentContext != null) ? parentContext
-                .getServerDispatcher() : null);
+    public ServletLogger(javax.servlet.ServletContext context) {
+        super(null, null);
+        this.context = context;
     }
 
     /**
-     * Returns the Servlet context.
+     * Returns the Servlet context to use for logging.
      * 
-     * @return The Servlet context.
+     * @return The Servlet context to use for logging.
      */
-    public ServletContext getServletContext() {
-        return this.servletContext;
+    private javax.servlet.ServletContext getContext() {
+        return this.context;
+    }
+
+    /**
+     * Log a LogRecord.
+     * 
+     * @param record
+     *            The LogRecord to be published
+     */
+    @Override
+    public void log(LogRecord record) {
+        if (record.getThrown() != null) {
+            getContext().log(record.getMessage(), record.getThrown());
+        } else {
+            getContext().log(record.getMessage());
+        }
     }
 
 }
