@@ -29,6 +29,7 @@ Import-Package: javax.servlet,
  org.restlet.engine,
  org.restlet.engine.component,
  org.restlet.ext.servlet,
+ org.restlet.ext.servlet.internal,
  org.restlet.representation,
  org.restlet.resource,
  org.restlet.routing,
