@@ -30,6 +30,7 @@ Import-Package: javax.servlet,
  org.restlet.engine.security,
  org.restlet.engine.util,
  org.restlet.ext.servlet,
+ org.restlet.ext.servlet.internal,
  org.restlet.representation,
  org.restlet.resource,
  org.restlet.routing,
