@@ -51,7 +51,7 @@ import org.restlet.data.ReferenceList;
 import org.restlet.data.Request;
 import org.restlet.data.Response;
 import org.restlet.data.Status;
-import org.restlet.ext.servlet.ServletWarClientHelper;
+import org.restlet.ext.servlet.internal.ServletWarClientHelper;
 import org.restlet.representation.InputRepresentation;
 import org.restlet.representation.Representation;
 import org.restlet.service.MetadataService;
